<resources>
    <string name="app_name">OCR_C22-KY03</string>
    <string name="welcome_image">welcome image</string>
    <string name="add_verification">Add Verification</string>
    <string name="status">Status</string>
    <string name="title_home">Welcome to</string>
    <string name="logo_traveloka">logo traveloka</string>
    <string name="logo_ocr">logo_ocr</string>
    <string name="logo_team">logo_team</string>
    <string name="img_status_ktp">img_status ktp</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_nik">NIK</string>
    <string name="tv_tempat_tgl_lahir">Tempat/Tgl Lahir</string>
    <string name="tv_jenis_kelamin">Jenis Kelamin</string>
    <string name="tv_gol_darah">Gol. Darah</string>
    <string name="tv_alamat">Alamat</string>
    <string name="tv_rt_rw">RT/RW</string>
    <string name="tv_kel_desa">Kel/Desa</string>
    <string name="tv_kecamatan">Kecamatan</string>
    <string name="tv_agama">Agama</string>
    <string name="tv_status_perkawinan">Status Perkawinan</string>
    <string name="tv_pekerjaan">Pekerjaan</string>
    <string name="tv_kewarganegaraan">Kewarganegaraan</string>
    <string name="title_form">Make Sure Your Data Matches Your KTP!</string>
    <string name="take_picture_failed">Take Picture Failed</string>
    <string name="failed_to_show_camera">Failed to show camera</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="please_insert_image">Please insert image</string>
    <string name="start_scan_ktp">Start scan KTP</string>
    <string name="prepare_your_ktp">Prepare your KTP</string>
    <string name="make_sure_your_ktp_card_is_in_good_condition">Make sure your KTP card is in good condition</string>
    <string name="pastikan_foto_ktp_jelas_tidak_blur_dan_tidak_glare">Pastikan foto KTP jelas, tidak blur dan tidak glare</string>
    <string name="try_again">Try Again</string>
    <string name="next">Next</string>
    <string name="icon_scan">icon_scan</string>
    <string name="position_your_smartphone_horizontally">Position your smartphone horizontally</string>
    <string name="start_take_selfie">Start Take Selfie</string>
    <string name="prepare_your_selfie">Prepare your selfie</string>
    <string name="make_sure_there_is_enough_light_the_photo_is_clear_not_blurry_and_not_glare">Make sure there is enough light, the photo is clear, not blurry and not glare</string>
    <string name="position_your_face_in_the_frame">Position your face in the Frame!</string>
    <string name="details">Details</string>
    <string name="icon_selfie">icon_selfie</string>
    <string name="preview">preview</string>
    <string name="frame">frame</string>
    <string name="capture">capture</string>
    <string name="information_title">title</string>
    <string name="upload_success">sukses</string>
    <string name="btn_continue">Continue</string>
    <string name="upload_failed">gagal</string>
    <string name="length_nik">NIK length must be 16 digits </string>
    <string name="length_password">Password must be more than 6 characters</string>
    <string name="valid_email">Invalid email</string>
    <string name="welcome">Welcome</string>
    <string name="register_now">Register now</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="filled">all field must be filled</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_validated">Your KTP is Validated!</string>
    <string name="validate_ktp_camera">Validate Your KTP!</string>
    <string name="logout">Logout</string>
</resources>