<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:stretchColumns="2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_nik"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nik"
                android:gravity="start"
                android:inputType="number"
                android:text="@string/tv_nik"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_nama"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_nama"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_tempat_tgl_lahir"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tempat_tgl_lahir"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_tempat_tgl_lahir"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_jenis_kelamin"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_jenis_kelamin"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_jenis_kelamin"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_gol_darah"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_gol_darah"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_gol_darah"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_alamat"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_alamat"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_alamat"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:paddingHorizontal="16dp"
                android:text="@string/tv_rt_rw"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_rt_rw"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_rt_rw"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:paddingHorizontal="16dp"
                android:text="@string/tv_kel_desa"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_kel_desa"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_kel_desa"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:paddingHorizontal="16dp"
                android:text="@string/tv_kecamatan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_kecamatan"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_kecamatan"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_agama"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_agama"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_agama"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_status_perkawinan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_status_perkawinan"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_status_perkawinan"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_pekerjaan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pekerjaan"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_pekerjaan"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/tv_kewarganegaraan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_kewarganegaraan"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/tv_kewarganegaraan"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>